--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ input[type=submit] {
   
   appearance:none;
   -webkit-appearance:none;
-  margin: auto;
   
   padding:10px;
   border:none;
@@ -43,14 +42,16 @@ input[type=submit] {
   color:#fff;
   font-weight:600;
   border-radius:5px;
-  width:40%;
+  max-width:40%;
  
 }
 
 form {
-  margin: 0px auto;
-  width: 100%;
-  height: 100%;
+  padding: 10px;
+  margin: 0px;
+  width:500px;
+  max-width: 100%;
+  max-height: 100%;
   background: rgba(255, 255, 255, 0.103);
   border-radius: 4px;
   box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
@@ -58,10 +59,13 @@ form {
 }
 
 .erreur {
-  padding:10px;
-  margin:10px;
+  
 }
 
 label {
+  font-family: "Raleway", sans-serif;
+}
+
+p {
   font-family: "Raleway", sans-serif;
 }
